syntax="proto3";

option java_multiple_files = true;
option java_package = "account";

service AccountService {
  rpc CreateUserAccount (AccountRequest) returns (AccountResponse);
}

message AccountRequest {
  string userId = 1;
  string firstName = 2;
  string lastName = 3;
  string address = 4;
  string dateOfBirth = 5;
}

message AccountResponse {
  string accountId = 1;
  string status = 2;
}