syntax = "proto3";

option java_multiple_files = true;
option java_package = "wallet";
option java_outer_classname = "WalletServiceOuterClass";

service WalletService {
  rpc CreateWalletAccount (WalletRequest) returns (WalletResponse);
}

message WalletRequest {
    string userId = 1;
}

message WalletResponse {
    string walletId = 1;
}